@@ -5,6 +5,7 @@ AUX lh-sources-3.6-armv6.patch 2482 SHA256 50ce1fc672656fa26fa4fa35694a1007049f6
 AUX lh-sources-3.7-armv6.patch 2518 SHA256 75dbd5b6f9178baf47e2d3a2e8211bccfda83feb8217606612cc5a2c85bc065b SHA512 e3183c94bfcadefb447aaeb07a7c9709e1141b1acba301e34159bbef43817e0cf298209a6a5a787a01b7581eb937933d5ee70eb55dbf9267f25583adaad8b448 WHIRLPOOL 04998e4b27542478754ffb835c37b8cab6478a7b05d4f7f303af291ea4fa774bea7f29923e06416eb23b809c37421d1d923a09238265e38c3bf17f731ec9aa35
 DIST aufs-sources-3.6.11.tar.xz 142476 SHA256 a758a7b81813c882bfb58fd08be35dd18a9f609dd7d1c1c07b5e043592afa4e7 SHA512 b13192a51443a6620fe0c571b34055ae6a706946a9011547d636b70c3fb226f1fd13304c291e8cf4db149b41eda745300bb767fa804f44b04792e0f467d0668a WHIRLPOOL 27c96a860a64580eb11b7a72991be4c56493981e4c1b3fc23ddedb79bef2339801316d0cc7c51911d8f5a3b39215cc282381dbff272536f979e3785b9d0c1a78
 DIST aufs-sources-3.7.1.tar.xz 142976 SHA256 2c98c605254403a1fa0765fbe7c53c02d257bbce94e4de2b2d4d2e623882947f SHA512 497cdfdcb402456a5f5c572dd1bf8269590f7ed22acbe9d1b8a8347d07da06c7183ddccea33f76d8eefbfe1f25b22c2a7e4b330a3c27097f5ce54b83feb1f24b WHIRLPOOL 50b056b10f720899ee799718e2c23816964408eab12467324071a60d6c7953cbd9da283a236200590a671c7bafcaaf0925440d35e92714df03220ee4237d848a
+DIST aufs-sources-3.7.3.tar.xz 142984 SHA256 f2d307363f4c4c8d991ada374134ad97c05ed7a9fc3f3e8403308bc0ff7fcd4d SHA512 ae894352f96afa99911e8de47dc946e60d3339538405e79894e699ec11226ca879f98f8c6444703daf3baaa84dac2a15a18fe5d34b2c3d1a72eb426e68c0b8b4 WHIRLPOOL d76e7e5c2ec60ee56e55ba83eeb417adfc03eadd9d9a3817452eeb95e9d751c804fe7e07004ce4e43e5d29ae5a511c711b6cba8dc72e39d6a9e3da0030a65113
 DIST bfq-patches-v5r1.tar.xz 42084 SHA256 921bbb30e18a68ca75a0e4a6b20f19f10577b813c0a65268f74d8eda02f9b0b0 SHA512 56c04b92da15289357d2d8dd63bc8bd54c52a1051c91e530f0e9a2fd44d51cd5a5d3414de7584fec48fd2143668ac271490bdac8b84b4b17b92fc47bc6eb1c90 WHIRLPOOL 8a0970e6ab00c86f832fed0785a0fcc42771621adf68638eb4964a82f65cd7a3a7d88c8b64b5f6e2e6a1f0db59d7764b44658a8e640cef14232a08d32e70ef5b
 DIST deblob-3.6 108747 SHA256 93df902f141fe72e9fb15b9acde2b2cb35f4632844d9073a94f0e4f15a074cbc SHA512 399a878b7f30f98434d21b50e2f3055788be5305498758ea00d0bc7fe53a891848435933aad0a9c335a68da0d4ba8fdd9aa87c67252e3ebc43c6e2143c183c84 WHIRLPOOL cb15045b152cd9d44d2b92e2a0bff392d53f2d75d2fe0705962c84113ad4703ef7d14401c4534f7c2752a669140b498eea3a0a4c1afdbadc3b2bc498c631437f
 DIST deblob-3.7 112072 SHA256 8b341a3d8d07ce3a21889d6bde312d534fa97490eac549b04948fa52fabbe7ea SHA512 42ab77708b4f07037b7a161b83b1790fde26408e3459794d793ea91fec21227dc6dbc462d694a13f90630f567f4df6f08d60a6ff8294078426b877b4d8e7a3be WHIRLPOOL c9071fcef9f6143ee2a4d4648bdb92ab3c514f5731e096bde9db392abc8e3450711875d7018c99255869dc280ad1116f7e07f87e1fbde7656aaa39a0ad595b9c
@@ -22,13 +23,13 @@ DIST linux-3.7.tar.bz2 83671392 SHA256 dc08d87a579fe2918362e6666e503a95a76296419
 EBUILD lh-sources-3.6.11-r1.ebuild 2561 SHA256 1196c6c6b99d4025b408155ed9d04ac79842e4a66320382a9afcbcd899146285 SHA512 eebf80f0d3fedcfdc8e39fe5740b59814cc4d8768b52728b8903c04290fc903f61740777d8cc176fac8490f570e89c53694a7bbaaa855cb53f7f7c14541ea576 WHIRLPOOL e9664b347bc9b60348176cee828d42430f6980a1ba0e1885063dd95a1f632f760ab80b07a94792a22d366ba60bd1e315e19ac73ccf2de79bc4974fea095fd957
 EBUILD lh-sources-3.7.1.ebuild 2647 SHA256 a427fdffbbf49a78db9573b3419eddaf41ab4d559c00616ec1c3b917b596760a SHA512 0611a144b344cc618a10f5ef7cba42a7464ca23dd437d48d8ad29234c7871e405a48854f9a0e3aaf84599d1a95bcebdeb6893566945b5779c7c41857f1c3aca8 WHIRLPOOL 1cd6c976b801d3007d56094b8e82112be10a96a15b0e49ffe4edbf42cc733ab921f8e194f0838fa1898f4daa03e599c18150b0b96a6f7d28108d9970d739b1f4
 EBUILD lh-sources-3.7.2.ebuild 2676 SHA256 674b2f91904700f888049594ed2642807c546c697cc7c02adaca6dcb54ce4d4a SHA512 492c11d6681251a71c562411e2de3d744965498a070a4bd4c4ea2546bace1be6da9e47065cbb3c9f2388c705ddfc5766eb9f9f586feee961f2f8811bd8d49a3b WHIRLPOOL e355df6e55d898a3c8c645568a7fe87067687091fe542478a07fed41571044a2ecace21d17f8af87693c648e3228a0c74a1fd4b127515f12da6a457c5a54b80c
-EBUILD lh-sources-3.7.3.ebuild 2683 SHA256 562f4742027ea2e74e80f379d82b4b621993d6a664204fc541e03ba294945c51 SHA512 aebdea3ccb7c640d277d7866b5ab91d6732bafbc454cd878180fef063b6cc80a1ecaac786e9546498c59aca242c593979879dc98c715fe649d9d319135d05878 WHIRLPOOL 55a49646a40b48c67070618a5a6ee1e52e61a5549c48c7758d7b1a720849145c10c8e855427d12620d90f89d31cdeb69c91e7bfdc4d2ff2641acf3d98b5739d2
-MISC ChangeLog 3423 SHA256 92d39d61a6d5f71f6d35c49e32bc29e6081715af133fccbc781d6bade6dc1c6e SHA512 d802253ec2d9cfb1cfe946c040a3b80f00e5da2351a1d5f1f198add63526df7a1eb1297858723a191c35382f990ff94b208e129593ff6e4ad6b6fb00e14ade20 WHIRLPOOL e714ee891caaaf4f0c877fc1ee7d46ebd168217dcc6c8384ca7f03e852cbb8dfb59a49e97c3c3a10dcb90d7ec4e31a4b0ebde8ddea28050e17d1d7fdfef25c21
-MISC metadata.xml 557 SHA256 982496d5745dd735211766ebc91e40ad9a8ec7d89eb78e00ad411d91c650fbad SHA512 330189802e94e4cc97c0f288c270e04345b055493fa7e387ca8d21c502dd3791babea54fa8ee3dd4fc4611ae76d5e0ae9568901c91a36817a4fc944715c08a2a WHIRLPOOL 145c8d803e2aa9b589b77065d361fe0bd9b8262767b6ee272dce7dc577bf6e72246617babe1204d56efe3b658bb3e6b6571a349d9f6e4ef2a9059f6d12f936fb
+EBUILD lh-sources-3.7.3.ebuild 3036 SHA256 681c8f364061ca7b980ffd79381b22b64ff4032d6923a12696dc796361ff4e84 SHA512 76a8e33aeae365bfe122c46c319c67760fd8f22dcb32778e7002426bc330d0e925a0bf38239b5a28b5037b9e791db20baefbaaa87d97ebb73ce2253c7468c7c7 WHIRLPOOL 88844d1bf4a1d5f0ddbb4ec2d8aa4346df6ea36e3a5496fa6f20086c6ab5066ed28fa737fc067c0bfc0a4bcea9fc4274bc82992f2032d72f721af598588e98af
+MISC ChangeLog 3543 SHA256 56e7ee7642282c650bd3f7716f0fba9c914f28523a5b302eb2b76a5c3b0dae63 SHA512 bf1a4061ca82160d55626fe61cdd3ce614a4d23882a184eaace96720653a99ee1da5ceba1f858ba868fab9b18517121e420b97b6d8477fb7ce51644f43d2a3f7 WHIRLPOOL e3a3f7ce28fa702a6dca0bfc07075892bdbbfdfe2743062e20158bec3620623d4ee44f8120f697262d6a8d2e55bb51d81f897124b508983083fd642c17ee8196
+MISC metadata.xml 621 SHA256 0e6f9ec38a6a9e192a6ab3cf83a409914c821b4dde2c1a15c28d558b6beef8bb SHA512 56744236081b425f4726c26c3b1a8e23297f1b7e4656ff4edbc2e6608a1150fb2e84ed1b58c5ab1318aebdab072392ef9d00160e2c766cc540bb6746bbe24bb3 WHIRLPOOL ed73cba1dee5abce3979c8f41094660b6eb046ef8c4d5820c060b863f54e6fb56a344c49630d8d03d400cba2dc2f4e5a35cd48c4ebdc4e9558511f2e9c9333bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlD5EBAACgkQgAnW8HDreRZ1hACgtswtoZUs11JwQINDj6/AJ0Nn
-0W0AoMdFlc4spJpLtMD+7VWTr8PeLJd5
-=XG4d
+iEYEAREIAAYFAlD5McUACgkQgAnW8HDreRZVhACgpZtDdL5iaOUaEv0+KzrhxdWU
+ePcAoMz1vBNxMFWya+xAAjGCnJf5/mIW
+=JMB+
 -----END PGP SIGNATURE-----
