@@ -12,5 +12,6 @@
   <use>
     <flag name="deblob">Remove binary blobs from kernel sources to provide libre license compliance.</flag>
     <flag name="module">Patch kernel to allow aufs being build as a module.</flag>
+    <flag name="proc">Support for /proc/maps and lsof(1)</flag>
   </use>
 </pkgmetadata>
